--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,9 +19,14 @@
 <div id="sidenav">
 	<h3>Petstore Admin</h3>
 	<a href="ux/">Petstore</a>
-	<a href="ui/w2ui/index.html">Entity Grids</a>
+	<a href="ui/w2ui/index.html">JPA Entities</a>
+	<a href="file-manager/index.html">File Manager</a>
+	<a href="file-explorer/">File Explorer</a>
+	<a href="web-shell/index.html">Web Shell</a>
 	<a href="h2">H2 Console</a>
 	<a href="swagger-ui/index.html">Swagger UI</a>
+	<a href="logs/">Log Viewer</a>
+<!--	<a href="sba/">Spring Boot Admin</a>-->
 </div>
 
 <div id="main"></div>
